# matrix

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
backend/: data.json  main.py  records.py  selectors.py  transactions.csv
backend/src/: selectors.py
frontend/: App.tsx  IgnitePlot.tsx  api.ts  index.tsx  package-lock.json  package.json  tsconfig.json  utils.ts
frontend/src/: App.tsx  api.ts  canvas.tsx
public/: index.html
src/: App.tsx  main.py  records.py  selectors.py
